# fpgmaas-cookiecutter-poetry-test-2

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-push-upgraded-branch.yml  on-release-upgraded-branch.yml
docs/: index.md  modules.md
fpgmaas_cookiecutter_poetry_test_2/: main_func.py
modules/: index.html
search/: search_index.json
tests/: test_foo.py
